# metadata_3mf

./: .gitignore  Cargo.toml  LICENSE  README.md  metadata.xml  test.3mf
src/: main.rs
